--- a/ItemSortSystem_ESP32/platformio.ini
+++ b/ItemSortSystem_ESP32/platformio.ini
@@ -16,3 +16,8 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	adafruit/DHT sensor library@^1.4.6
 	beegee-tokyo/DHT sensor library for ESPx@^1.19
+	arduino-libraries/Servo@^1.2.2
+	madhephaestus/ESP32Servo@^3.0.6
+board_build.partitions = huge_app.csv
+monitor_speed = 115200
+upload_speed = 921600
